fetching API to login and register activity

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
         android:padding="@dimen/_8sdp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.SplashActivity"
+        tools:context=".splash.SplashActivity"
         android:orientation="vertical"
         android:background="@android:color/white">
 
