--- a/app/src/main/res/navigation/on_board_nav.xml
+++ b/app/src/main/res/navigation/on_board_nav.xml
@@ -18,6 +18,6 @@
     </fragment>
     <activity
         android:id="@+id/signInActivity"
-        android:name="com.wahyu.hiringapps2.activities.SignInActivity"
+        android:name="com.wahyu.hiringapps2.login.SignInActivity"
         android:label="SignInActivity" />
 </navigation>
