--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -7,7 +7,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".dashboard.WebViewActivity">
+        tools:context=".dashboard.profile.WebViewActivity">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/top_toolbar"
