--- a/app/src/main/res/layout/activity_form_edit_profile.xml
+++ b/app/src/main/res/layout/activity_form_edit_profile.xml
@@ -8,7 +8,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".dashboard.FormEditProfileActivity">
+        tools:context=".dashboard.profile.FormEditProfileActivity">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/top_toolbar"
