--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dashboard.fragment.ProfileFragment">
+    tools:context=".dashboard.profile.ProfileFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/top_toolbar"
