--- a/app/src/main/res/layout/item_recycle_view_home.xml
+++ b/app/src/main/res/layout/item_recycle_view_home.xml
@@ -30,8 +30,8 @@
 
                 <ImageView
                     android:id="@+id/iv_image"
-                    android:layout_width="@dimen/_150sdp"
-                    android:layout_height="@dimen/_150sdp"
+                    android:layout_width="@dimen/_200sdp"
+                    android:layout_height="@dimen/_200sdp"
                     android:layout_gravity="center"
                     android:contentDescription="@string/profile_image" />
 
@@ -56,6 +56,7 @@
                     android:layout_marginStart="@dimen/_8sdp"
                     android:layout_marginTop="@dimen/_8sdp"
                     android:layout_marginEnd="@dimen/_8sdp"
+                    android:layout_marginBottom="@dimen/_8sdp"
                     android:fontFamily="@font/ubuntu_regular"
                     android:gravity="center"
                     android:includeFontPadding="false"
