--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,8 +11,13 @@
     <style name="SpinnerToolbar" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
         <item name="android:textColor">@color/colorTextIcons</item>
         <item name="fontFamily">@font/ubuntu_bold</item>
-        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:textSize">@dimen/_16ssp</item>
+        <item name="spinnerDropDownItemStyle">@color/colorTextIcons</item>
         <item name="android:spinnerItemStyle">@style/SpinnerToolbar</item>
+    </style>
+
+    <style name="ToolbarColoredBackArrow" parent="AppTheme">
+        <item name="android:textColorSecondary">@color/colorTextIcons</item>
     </style>
 
 </resources>
