menambahkan fetch API di fitur profile fragment view

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -127,7 +127,7 @@
                             android:layout_marginEnd="@dimen/_8sdp"
                             android:background="@null"
                             android:fontFamily="@font/ubuntu_regular"
-                            android:hint="@string/you_example_com"
+                            android:hint="@string/enter_email_address"
                             android:imeOptions="actionNext"
                             android:importantForAutofill="no"
                             android:includeFontPadding="false"
@@ -144,18 +144,86 @@
                             android:layout_marginEnd="@dimen/_8sdp"
                             android:fontFamily="@font/ubuntu_regular"
                             android:includeFontPadding="false"
-                            android:text="@string/role_account"
+                            android:text="@string/company"
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="@dimen/_11ssp" />
 
-                        <Spinner
-                            android:id="@+id/spinner"
+                        <EditText
+                            android:id="@+id/et_company_name"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_30sdp"
                             android:layout_marginStart="@dimen/_8sdp"
                             android:layout_marginEnd="@dimen/_8sdp"
-                            android:theme="@style/ThemeOverlay.AppCompat.Light"
-                            android:entries="@array/role_accounts" />
+                            android:background="@null"
+                            android:fontFamily="@font/ubuntu_regular"
+                            android:hint="@string/enter_company_name"
+                            android:imeOptions="actionNext"
+                            android:importantForAutofill="no"
+                            android:includeFontPadding="false"
+                            android:inputType="textEmailAddress"
+                            android:textColor="@color/colorPrimaryText"
+                            android:textColorHint="@color/colorHintText"
+                            android:textSize="@dimen/_13ssp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_8sdp"
+                            android:layout_marginTop="@dimen/_8sdp"
+                            android:layout_marginEnd="@dimen/_8sdp"
+                            android:fontFamily="@font/ubuntu_regular"
+                            android:includeFontPadding="false"
+                            android:text="@string/role_job"
+                            android:textColor="@color/colorPrimaryText"
+                            android:textSize="@dimen/_11ssp" />
+
+                        <EditText
+                            android:id="@+id/et_role_job"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/_30sdp"
+                            android:layout_marginStart="@dimen/_8sdp"
+                            android:layout_marginEnd="@dimen/_8sdp"
+                            android:background="@null"
+                            android:fontFamily="@font/ubuntu_regular"
+                            android:hint="@string/enter_role_job_in_the_company"
+                            android:imeOptions="actionNext"
+                            android:importantForAutofill="no"
+                            android:includeFontPadding="false"
+                            android:inputType="textEmailAddress"
+                            android:textColor="@color/colorPrimaryText"
+                            android:textColorHint="@color/colorHintText"
+                            android:textSize="@dimen/_13ssp" />
+
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_8sdp"
+                            android:layout_marginTop="@dimen/_8sdp"
+                            android:layout_marginEnd="@dimen/_8sdp"
+                            android:fontFamily="@font/ubuntu_regular"
+                            android:includeFontPadding="false"
+                            android:text="@string/phone_number"
+                            android:textColor="@color/colorPrimaryText"
+                            android:textSize="@dimen/_11ssp" />
+
+                        <EditText
+                            android:id="@+id/et_phone_number"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/_30sdp"
+                            android:layout_marginStart="@dimen/_8sdp"
+                            android:layout_marginEnd="@dimen/_8sdp"
+                            android:background="@null"
+                            android:fontFamily="@font/ubuntu_regular"
+                            android:hint="@string/enter_phone_number"
+                            android:imeOptions="actionNext"
+                            android:importantForAutofill="no"
+                            android:includeFontPadding="false"
+                            android:inputType="phone"
+                            android:textColor="@color/colorPrimaryText"
+                            android:textColorHint="@color/colorHintText"
+                            android:textSize="@dimen/_13ssp" />
 
                         <TextView
                             android:layout_width="match_parent"
