--- a/app/src/main/res/layout/fragment_projects.xml
+++ b/app/src/main/res/layout/fragment_projects.xml
@@ -14,6 +14,8 @@
             android:layout_height="?android:actionBarSize"
             android:background="@color/colorPrimary"
             android:layout_marginBottom="@dimen/_8sdp"
+            app:title="@string/projects"
+            app:titleTextColor="@color/colorTextIcons"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
