--- a/app/src/main/res/layout/activity_hire.xml
+++ b/app/src/main/res/layout/activity_hire.xml
@@ -1,82 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".register.SignUpActivity">
+        tools:context=".dashboard.home.detail.hire.HireActivity">
 
-        <LinearLayout
-            android:id="@+id/layoutHeader"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/top_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
+            android:layout_height="?android:actionBarSize"
             android:background="@color/colorPrimary"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingStart="@dimen/_8sdp"
-            android:paddingEnd="@dimen/_8sdp"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/imageBack"
-                android:layout_width="@dimen/_25sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:contentDescription="@string/app_name"
-                android:src="@drawable/ic_image_back"
-                app:tint="@color/colorTextIcons" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginLeft="@dimen/_8sdp"
-                android:fontFamily="@font/ubuntu_bold"
-                android:includeFontPadding="false"
-                android:text="@string/sign_up"
-                android:textColor="@color/colorTextIcons"
-                android:textSize="@dimen/_15ssp" />
-
-        </LinearLayout>
+            android:theme="@style/ToolbarColoredBackArrow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/ic_image_back"
+            app:title="Hire Form"
+            app:titleTextColor="@color/colorTextIcons" />
 
         <ScrollView
+            android:id="@+id/scroll_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/layoutHeader">
+            app:layout_constraintTop_toBottomOf="@id/top_toolbar">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/_16sdp"
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/tv_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_20sdp"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:layout_marginEnd="@dimen/_20sdp"
-                    android:fontFamily="@font/ubuntu_regular"
-                    android:gravity="center"
-                    android:includeFontPadding="false"
-                    android:text="@string/we_need_a_few_detail_to_get_your_account_ready"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/ubuntu_bold"
+                    android:text="@string/contact_name"
                     android:textColor="@color/colorPrimaryText"
-                    android:textSize="@dimen/_15ssp" />
+                    android:textSize="@dimen/_20ssp" />
+
+                <TextView
+                    android:id="@+id/tv_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/ubuntu_medium"
+                    android:text="@string/description"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="@dimen/_16ssp" />
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_20sdp"
-                    app:cardCornerRadius="@dimen/_4sdp">
+                    android:layout_marginTop="@dimen/_16sdp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="@dimen/_4sdp">
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_8sdp"
+                            android:layout_marginTop="@dimen/_16sdp"
+                            android:layout_marginEnd="@dimen/_8sdp"
+                            android:fontFamily="@font/ubuntu_regular"
+                            android:includeFontPadding="false"
+                            android:text="@string/select_project_to_offer"
+                            android:textColor="@color/colorPrimaryText"
+                            android:textSize="@dimen/_11ssp" />
+
+                        <Spinner
+                            android:id="@+id/spinner"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_8sdp"
+                            android:layout_marginTop="@dimen/_8sdp"
+                            android:layout_marginEnd="@dimen/_8sdp" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -91,18 +102,18 @@
                             android:textSize="@dimen/_11ssp" />
 
                         <EditText
-                            android:id="@+id/et_full_name"
+                            android:id="@+id/et_input_name"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_30sdp"
                             android:layout_marginStart="@dimen/_8sdp"
                             android:layout_marginEnd="@dimen/_8sdp"
                             android:background="@null"
                             android:fontFamily="@font/ubuntu_regular"
-                            android:hint="@string/full_name_hint"
+                            android:hint="@string/enter_your_name"
                             android:imeOptions="actionNext"
                             android:importantForAutofill="no"
                             android:includeFontPadding="false"
-                            android:inputType="text"
+                            android:inputType="textPersonName"
                             android:textColor="@color/colorPrimaryText"
                             android:textColorHint="@color/colorHintText"
                             android:textSize="@dimen/_13ssp" />
@@ -120,7 +131,7 @@
                             android:textSize="@dimen/_11ssp" />
 
                         <EditText
-                            android:id="@+id/et_email"
+                            android:id="@+id/et_input_email"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_30sdp"
                             android:layout_marginStart="@dimen/_8sdp"
@@ -144,72 +155,12 @@
                             android:layout_marginEnd="@dimen/_8sdp"
                             android:fontFamily="@font/ubuntu_regular"
                             android:includeFontPadding="false"
-                            android:text="@string/company"
-                            android:textColor="@color/colorPrimaryText"
-                            android:textSize="@dimen/_11ssp" />
-
-                        <EditText
-                            android:id="@+id/et_company_name"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/_30sdp"
-                            android:layout_marginStart="@dimen/_8sdp"
-                            android:layout_marginEnd="@dimen/_8sdp"
-                            android:background="@null"
-                            android:fontFamily="@font/ubuntu_regular"
-                            android:hint="@string/enter_company_name"
-                            android:imeOptions="actionNext"
-                            android:importantForAutofill="no"
-                            android:includeFontPadding="false"
-                            android:inputType="textEmailAddress"
-                            android:textColor="@color/colorPrimaryText"
-                            android:textColorHint="@color/colorHintText"
-                            android:textSize="@dimen/_13ssp" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_8sdp"
-                            android:layout_marginTop="@dimen/_8sdp"
-                            android:layout_marginEnd="@dimen/_8sdp"
-                            android:fontFamily="@font/ubuntu_regular"
-                            android:includeFontPadding="false"
-                            android:text="@string/role_job"
-                            android:textColor="@color/colorPrimaryText"
-                            android:textSize="@dimen/_11ssp" />
-
-                        <EditText
-                            android:id="@+id/et_role_job"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/_30sdp"
-                            android:layout_marginStart="@dimen/_8sdp"
-                            android:layout_marginEnd="@dimen/_8sdp"
-                            android:background="@null"
-                            android:fontFamily="@font/ubuntu_regular"
-                            android:hint="@string/enter_role_job_in_the_company"
-                            android:imeOptions="actionNext"
-                            android:importantForAutofill="no"
-                            android:includeFontPadding="false"
-                            android:inputType="textEmailAddress"
-                            android:textColor="@color/colorPrimaryText"
-                            android:textColorHint="@color/colorHintText"
-                            android:textSize="@dimen/_13ssp" />
-
-
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_8sdp"
-                            android:layout_marginTop="@dimen/_8sdp"
-                            android:layout_marginEnd="@dimen/_8sdp"
-                            android:fontFamily="@font/ubuntu_regular"
-                            android:includeFontPadding="false"
                             android:text="@string/phone_number"
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="@dimen/_11ssp" />
 
                         <EditText
-                            android:id="@+id/et_phone_number"
+                            android:id="@+id/et_input_phone_number"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/_30sdp"
                             android:layout_marginStart="@dimen/_8sdp"
@@ -233,78 +184,48 @@
                             android:layout_marginEnd="@dimen/_8sdp"
                             android:fontFamily="@font/ubuntu_regular"
                             android:includeFontPadding="false"
-                            android:text="@string/password"
+                            android:text="@string/description"
                             android:textColor="@color/colorPrimaryText"
                             android:textSize="@dimen/_11ssp" />
 
-                        <com.google.android.material.textfield.TextInputLayout
+                        <EditText
+                            android:id="@+id/et_input_description"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_8sdp"
                             android:layout_marginEnd="@dimen/_8sdp"
-                            android:layout_marginBottom="@dimen/_8sdp"
-                            app:passwordToggleEnabled="true">
-
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/et_password"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:background="@null"
-                                android:fontFamily="@font/ubuntu_regular"
-                                android:hint="@string/enter_password"
-                                android:imeOptions="actionDone"
-                                android:importantForAutofill="no"
-                                android:includeFontPadding="false"
-                                android:inputType="textPassword"
-                                android:textColor="@color/colorPrimaryText"
-                                android:textColorHint="@color/colorHintText"
-                                android:textSize="@dimen/_13ssp" />
-                        </com.google.android.material.textfield.TextInputLayout>
-
+                            android:layout_marginBottom="@dimen/_16sdp"
+                            android:background="@null"
+                            android:fontFamily="@font/ubuntu_regular"
+                            android:hint="@string/enter_your_description"
+                            android:imeOptions="actionDone"
+                            android:importantForAutofill="no"
+                            android:includeFontPadding="false"
+                            android:inputType="textMultiLine"
+                            android:paddingTop="@dimen/_6sdp"
+                            android:paddingBottom="@dimen/_6sdp"
+                            android:textColor="@color/colorPrimaryText"
+                            android:textColorHint="@color/colorHintText"
+                            android:textSize="@dimen/_13ssp" />
 
                     </LinearLayout>
 
                 </androidx.cardview.widget.CardView>
 
                 <Button
-                    android:id="@+id/buttonSignUp"
+                    android:id="@+id/btn_hire"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_40sdp"
-                    android:layout_marginStart="@dimen/_20sdp"
-                    android:layout_marginEnd="@dimen/_20sdp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_16sdp"
                     android:background="@color/colorPrimary"
+                    android:bottomLeftRadius="10dp"
+                    android:bottomRightRadius="10dp"
                     android:fontFamily="@font/ubuntu_bold"
-                    android:includeFontPadding="false"
-                    android:text="@string/sign_up"
+                    android:text="@string/hire"
                     android:textColor="@color/colorTextIcons"
-                    android:textSize="@dimen/_13ssp"
-                    app:layout_constraintTop_toBottomOf="@id/cardSignIn" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    android:fontFamily="@font/ubuntu_regular"
-                    android:gravity="center"
-                    android:includeFontPadding="false"
-                    android:text="@string/already_have_an_account"
-                    android:textColor="@color/colorPrimaryText"
-                    android:textSize="@dimen/_13ssp" />
-
-                <TextView
-                    android:id="@+id/textSignIn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/_20sdp"
-                    android:fontFamily="@font/ubuntu_bold"
-                    android:gravity="center"
-                    android:includeFontPadding="false"
-                    android:padding="@dimen/_6sdp"
-                    android:text="@string/sign_in"
-                    android:textAllCaps="true"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="@dimen/_14ssp"
-                    app:layout_constraintBottom_toBottomOf="parent" />
+                    android:textSize="@dimen/_20ssp"
+                    android:topLeftRadius="10dp"
+                    android:topRightRadius="10dp" />
 
             </LinearLayout>
 
@@ -322,5 +243,4 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </layout>
